--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="carousel-overlay-container">
                 <div class="carousel-overlay">
                     <h2 class="fs-1">Conf Bs As</h2>
-                    <p class="text-end fw-normal text-small">
+                    <p class="text-end fw-normal lead">
                         Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
                         conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a
                         conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel
@@ -91,12 +91,12 @@
                 <div class="carousel-item active">
                     <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
-                <!-- <div class="carousel-item">
+                <div class="carousel-item">
                     <img src="./assets/images/ba2.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/ba3.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
