--- a/index.html
+++ b/index.html
@@ -211,33 +211,33 @@
 
     <footer>
         <div class="container p-4">
-            <div class="footer d-flex justify-content-between text-center px-5">
+            <div class="footer text-center px-5 d-flex justify-content-between row">
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Preguntas frecuentes</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Contáctanos</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Prensa</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Conferencias</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Términos y condiciones</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Privacidad</a>
                 </div>
 
-                <div class="col-1">
+                <div class="col-12 col-lg-1">
                     <a href="#">Estudiantes</a>
                 </div>
             </div>
