--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/ba1.jpg" class="d-block w-100" alt="Imágen de la Ciudad de Buenos Aires">
+                    <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/ba2.jpg" class="d-block w-100" alt="Imágen de la Ciudad de Buenos Aires">
+                    <img src="./assets/images/ba2.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/ba3.jpg" class="d-block w-100" alt="Imágen de la Ciudad de Buenos Aires">
+                    <img src="./assets/images/ba3.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="container">
-                <div class="card-group px-lg-5 mx-lg-5 d-block d-md-flex gap-5">
+                <div class="card-group d-block px-sm-5 mx-sm-5 d-md-flex gap-5 px-md-0 mx-md-0 px-lg-5 mx-lg-5 ">
                     <div class="card border border-1 mb-5 mb-md-0">
                         <img src="./assets/images/steve.jpg" class="card-img-top" alt="Imágen de Steve Jobs">
     
