--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
+                    <div style="background-image: url(./assets/images/ba1.jpg);" class="parallax"></div><!-- 
+                    <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires"> -->
                 </div>
-                <div class="carousel-item">
+               <!--  <div class="carousel-item">
                     <img src="./assets/images/ba2.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/ba3.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
@@ -208,7 +209,7 @@
 
     <footer>
         <div class="container p-4">
-            <div class="footer text-center px-5 d-flex justify-content-between row">
+            <div class="footer text-center px-5 d-flex justify-content-between align-items-center row">
 
                 <div class="col-12 col-lg-1">
                     <a href="#">Preguntas frecuentes</a>
