--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     <footer>
         <div class="container p-4">
-            <div class="footer text-center px-5 d-flex justify-content-between row">
+            <div class="footer text-center px-5 d-flex justify-content-between align-items-center row">
 
                 <div class="col-12 col-lg-1">
                     <a href="#">Preguntas frecuentes</a>
