--- a/index.html
+++ b/index.html
@@ -86,15 +86,14 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div style="background-image: url(./assets/images/ba1.jpg);" class="parallax"></div><!-- 
-                    <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires"> -->
+                    <img src="./assets/images/ba1.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
-               <!--  <div class="carousel-item">
+                <div class="carousel-item">
                     <img src="./assets/images/ba2.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/ba3.jpg" class="d-block w-auto" alt="Imágen de la Ciudad de Buenos Aires">
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
