--- a/pages/buy_tickets.html
+++ b/pages/buy_tickets.html
@@ -97,7 +97,7 @@
                     <p class="h1">Valor de ticket $200</p>
                 </div>
 
-                <form class="row g-3">
+                <form class="row g-3" id="buyForm">
                     <div class="col-md-6">
                         <input type="text" class="form-control" id="nombre" placeholder="Nombre">
                     </div>
@@ -112,21 +112,23 @@
 
                     <div class="col-md-6">
                         <label for="ticketsQuantity" class="form-label">Cantidad</label>
-                        <input type="text" class="form-control" id="ticketsQuantity" placeholder="Cantidad">
+                        <input type="number" class="form-control" id="ticketsQuantity" placeholder="Cantidad" required>
                     </div>
 
                     <div class="col-md-6">
                         <label for="selectedCategory" class="form-label">Categoría</label>
-                        <select id="selectedCategory" class="form-select">
-                            <option selected disabled>Elija la categoría</option>
+                        <select id="selectedCategory" class="form-select" required>
+                            <option selected disabled value="">Elija la categoría</option>
                             <option>Estudiante</option>
                             <option>Trainee</option>
                             <option>Junior</option>
                         </select>
                     </div>
 
-                    <div class="alert alert-primary" role="alert">
-                        Total a Pagar: $
+                    <div class="col-12">
+                        <div class="alert alert-primary" role="alert" id="payMount">
+                            Total a Pagar: $
+                        </div>
                     </div>
 
                     <div class="d-flex gap-2 justify-content-stretch">
