--- a/pages/buy_tickets.html
+++ b/pages/buy_tickets.html
@@ -69,21 +69,21 @@
             <!-- Sección 1 - Categorías -->
             <section class="categorias">
                 <div class="categoria border border-primary" id="categoria1">
-                    <h4 class="my-3">Estudiante</h4>
+                    <h4 class="my-3 categoria-titulo">Estudiante</h4>
                     <p>Tienen un descuento</p>
                     <p class="fw-bold">80%</p>
                     <p class="categoria-aclaracion text-secondary">* presentar documentación</p>
                 </div>
 
                 <div class="categoria border border-success" id="categoria2">
-                    <h4 class="my-3">Trainee</h4>
+                    <h4 class="my-3 categoria-titulo">Trainee</h4>
                     <p>Tienen un descuento</p>
                     <p class="fw-bold">50%</p>
                     <p class="categoria-aclaracion text-secondary">* presentar documentación</p>
                 </div>
 
                 <div class="categoria border border-warning" id="categoria3">
-                    <h4 class="my-3">Junior</h4>
+                    <h4 class="my-3 categoria-titulo">Junior</h4>
                     <p>Tienen un descuento</p>
                     <p class="fw-bold">15%</p>
                     <p class="categoria-aclaracion text-secondary">* presentar documentación</p>
@@ -97,31 +97,31 @@
                     <p class="h1">Valor de ticket $200</p>
                 </div>
 
-                <form class="row g-3" id="buyForm">
+                <form class="row g-3 form-floating" id="buyForm">
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" minlength="2" required>
                     </div>
 
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="apellido" placeholder="Apellido">
+                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Apellido" minlength="2"  required>
                     </div>
 
                     <div class="col-12">
-                        <input type="email" class="form-control" id="email" placeholder="Correo">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Correo" required>
                     </div>
 
                     <div class="col-md-6">
                         <label for="ticketsQuantity" class="form-label">Cantidad</label>
-                        <input type="number" class="form-control" id="ticketsQuantity" placeholder="Cantidad" required>
+                        <input type="number" class="form-control" id="ticketsQuantity" name="ticketsQuantity" placeholder="Cantidad" required>
                     </div>
 
                     <div class="col-md-6">
                         <label for="selectedCategory" class="form-label">Categoría</label>
-                        <select id="selectedCategory" class="form-select" required>
-                            <option selected disabled value="">Elija la categoría</option>
-                            <option>Estudiante</option>
-                            <option>Trainee</option>
-                            <option>Junior</option>
+                        <select id="selectedCategory" name="selectedCategory" class="form-select" required>
+                            <option selected disabled value="">Elija una categoría</option>
+                            <option value="Estudiante">Estudiante</option>
+                            <option value="Trainee">Trainee</option>
+                            <option value="Junior">Junior</option>
                         </select>
                     </div>
 
@@ -133,7 +133,7 @@
 
                     <div class="d-flex gap-2 justify-content-stretch">
                         <button type="reset" class="btn btn-submit flex-grow-1">Borrar</button>
-                        <button type="submit" class="btn btn-submit flex-grow-1">Resumen</button>
+                        <button type="submit" class="btn btn-submit flex-grow-1" id="buyFormBtn">Resumen</button>
                     </div>
                 </form>
             </section>
@@ -179,9 +179,10 @@
     <script src="../js/main.js"></script>
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+    <!-- Sweet Alert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
