--- a/pages/buy_tickets.html
+++ b/pages/buy_tickets.html
@@ -35,11 +35,11 @@
                 </button>
 
                 <!-- Items del Navbar -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" >
                     <ul class="navbar-nav text-end text-lg-start">
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">La conferencia</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">La conferencia</a>
                         </li>
 
                         <li class="nav-item">
@@ -55,7 +55,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-success" href="../pages/buy_tickets.html">Comprar tickets</a>
+                            <a class="nav-link text-success text-decoration-underline" href="../pages/buy_tickets.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
@@ -176,7 +176,7 @@
     </footer>
 
     <!-- JS -->
-    <script src="../js/main.js"></script>
+    <script src="../js/buyTickets.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
